force-app/main/default/objects/InventoryLedger__c/InventoryLedger__c.object-meta.xml
<CustomObject>
    <label>Inventory Ledger</label>
    <pluralLabel>Inventory Ledgers</pluralLabel>
    <nameField>
        <displayFormat>IL-{0000}</displayFormat>
        <label>Inventory Ledger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <searchStatus>Active</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Ledgers</relationshipLabel>
        <relationshipName>InventoryLedgers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory Ledgers</relationshipLabel>
        <relationshipName>InventoryLedgers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MovementType__c</fullName>
        <label>Movement Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restrictedPicklist>true</restrictedPicklist>
            <valueSetDefinition>
                <value>
                    <fullName>StockIn</fullName>
                    <label>Stock In</label>
                </value>
                <value>
                    <fullName>StockOut</fullName>
                    <label>Stock Out</label>
                </value>
                <value>
                    <fullName>Adjust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitCost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BatchLot__c</fullName>
        <label>Batch Lot</label>
        <referenceTo>BatchLot__c</referenceTo>
        <relationshipLabel>Inventory Ledgers</relationshipLabel>
        <relationshipName>InventoryLedgers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RefType__c</fullName>
        <label>Ref Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restrictedPicklist>true</restrictedPicklist>
            <valueSetDefinition>
                <value>
                    <fullName>GRN</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Adjust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RefId__c</fullName>
        <label>Ref ID</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TxnTs__c</fullName>
        <label>Txn Ts</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <validationRules>
        <fullName>Qty_Not_Zero</fullName>
        <active>true</active>
        <description>Qty must not be zero</description>
        <errorConditionFormula>Qty__c = 0</errorConditionFormula>
        <errorDisplayField>Qty__c</errorDisplayField>
        <errorMessage>Qty must not be zero</errorMessage>
    </validationRules>
</CustomObject>