force-app/main/default/objects/InventoryLedger__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory Ledger</relationshipLabel>
    <relationshipName>InventoryLedger</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>