force-app/main/default/objects/InventoryLedger__c/fields/MovementType__c.field-meta.xml
<CustomField>
    <fullName>MovementType__c</fullName>
    <label>MovementType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>StockIn</fullName>
                <default>False</default>
                <label>StockIn</label>
            </value>
            <value>
                <fullName>StockOut</fullName>
                <default>False</default>
                <label>StockOut</label>
            </value>
            <value>
                <fullName>Adjust</fullName>
                <default>False</default>
                <label>Adjust</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>