force-app/main/default/objects/InventoryLedger__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inventory Ledger</relationshipLabel>
    <relationshipName>InventoryLedger</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>