force-app/main/default/objects/InventoryLedger__c/fields/RefId__c.field-meta.xml
<CustomField>
    <fullName>RefId__c</fullName>
    <label>RefId</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>