force-app/main/default/objects/InventoryLedger__c/fields/RefType__c.field-meta.xml
<CustomField>
    <fullName>RefType__c</fullName>
    <label>RefType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>GRN</fullName>
                <default>False</default>
                <label>GRN</label>
            </value>
            <value>
                <fullName>Invoice</fullName>
                <default>False</default>
                <label>Invoice</label>
            </value>
            <value>
                <fullName>Return</fullName>
                <default>False</default>
                <label>Return</label>
            </value>
            <value>
                <fullName>Adjust</fullName>
                <default>False</default>
                <label>Adjust</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>