force-app/main/default/objects/InventoryLedger__c/fields/TxnTs__c.field-meta.xml
<CustomField>
    <fullName>TxnTs__c</fullName>
    <label>TxnTs</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>