force-app/main/default/objects/InventoryLedger__c/validationRules/Qty_Not_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Qty_Not_Zero</fullName>
    <active>true</active>
    <description>Quantity must not be zero</description>
    <errorConditionFormula>Qty__c = 0</errorConditionFormula>
    <errorDisplayField>Qty__c</errorDisplayField>
    <errorMessage>Quantity must not be zero</errorMessage>
</ValidationRule>