force-app/main/default/objects/InventoryLedger__c/validationRules/Qty_NotZero.validationRule-meta.xml
<ValidationRule>
    <fullName>Qty_NotZero</fullName>
    <active>true</active>
    <description>Quantity cannot be zero</description>
    <errorConditionFormula>Qty__c = 0</errorConditionFormula>
    <errorDisplayField>Qty__c</errorDisplayField>
    <errorMessage>Quantity cannot be zero for ledger entries</errorMessage>
</ValidationRule>